--- a/style.css
+++ b/style.css
@@ -117,15 +117,22 @@ section > img {
   border-radius: 10px;
   display: flex;
   max-width: 100%;
+  max-height: 80%;
 
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
+#modal > a{
+
+  max-width: 80%;
+  max-height: 80%;
+}
+
 #modal > a > img {
   max-width: 100%;
-
+  max-height: 100%;
   border-radius: 10px;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.9);
   -webkit-box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.9);
