--- a/style.css
+++ b/style.css
@@ -104,7 +104,6 @@ section > img {
   height: 100vh;
   width: 100vw;
   max-width: 100%;
-
   background-color: rgba(0, 0, 0, 0.678);
   display: flex;
   flex-direction: column;
@@ -120,14 +119,12 @@ section > img {
   display: flex;
   max-width: 100%;
   max-height: 80%;
-
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
 #modal > a{
-
   max-width: 80%;
   max-height: 80%;
 }
@@ -157,4 +154,42 @@ section > img {
 .modal-inact {
   display: none;
   background-color: rgba(255, 255, 255, 0);
+}
+
+#autocomplete-list{
+  
+  position: absolute;
+  /* display: none; */
+  z-index: 2;
+}
+
+#autocomplete-list div {
+  position: relative;
+  /* right: 32px; */
+  background: white;
+  /* list-style: none; */
+  top: -16px;
+  height: 40px;
+  min-width: 235px;
+  width: auto;
+  border-bottom: 1px solid #D8D8D8;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.14);
+  margin: 0;
+  padding: 7px;
+  padding-left: 9px;
+  transition: background 0.2s;
+  /* display: flex; */
+  justify-content: space-between;
+  text-transform: capitalize;
+}
+
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9;
+}
+.autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: blueviolet !important;
+  color: #ffffff;
 }
